@@ -2,7 +2,9 @@
 = rufus-jig CHANGELOG.txt
 
 
-== rufus-jig - 0.1.13    not yet released
+== rufus-jig - 0.1.13    released 2010/02/12
+
+- implemented Rufus::Jig::Couch#post
 
 
 == rufus-jig - 0.1.12    released 2010/01/13
